# api-gateway

./: .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
helm/api-gateway-pompeeva/: Chart.yaml  values.yaml
helm/api-gateway-pompeeva/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
k8s/: deployment.yaml  service.yaml
src/app/: config.py  main.py
src/app/endpoints/: auth_endpoints.py  health_endpoints.py  transaction_endpoints.py
src/app/schemas/: auth_schemas.py  transaction_schemas.py
src/tests/unit/: test_auth_endpoints.py  test_health_endpoints.py  test_transaction_endpoints.py
