[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
requests = "^2.32.3"
httpx = "^0.27.0"
anyio = "^4.4.0"
pytest-asyncio = "^0.23.8"
pytest-coverage = "^0.0"
mypy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
 asyncio_mode = "auto"
